syntax = "proto3";
package qa.loadtesting.alilo.backend.v1;

option go_package = "github.com/aliexpressru/alilo-backend/pkg/pb/qa/loadtesting/alilo/backend/v1";


import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

import "qa/loadtesting/alilo/backend/v1/models.proto";

message GetAllAgentsRequest {
}

message GetAllAgentsResponse {
  bool status = 1;
  repeated .qa.loadtesting.alilo.backend.v1.Agent agents = 2;
  string message = 3;
}

message GetAgentRequest {
  int32 agent_id = 1;
}

message GetAgentResponse {
  bool status = 1;
  .qa.loadtesting.alilo.backend.v1.Agent agent = 2;
  string message = 3;
}

message SetAgentRequest {
  .qa.loadtesting.alilo.backend.v1.Agent agent = 1;
}

message SetAgentResponse {
  bool status = 1;
  int32 agent_id = 2;
  string message = 3;
}

message UpdateAgentRequest {
  .qa.loadtesting.alilo.backend.v1.Agent agent = 2;
}

message UpdateAgentResponse {
  bool status = 1;
  string message = 2;
}

message DeleteAgentRequest {
  int32 agent_id = 1;
}

message DeleteAgentResponse {
  bool status = 1;
  string message = 2;
}

message GetAllTagsRequest {
}

message GetAllTagsResponse {
  bool status = 1;
  string message = 2;
  repeated string tags = 3;
}

message GetAllAgentsByTagRequest {
  string tag = 1;
}

message GetAllAgentsByTagResponse {
  bool status = 1;
  string message = 2;
  repeated .qa.loadtesting.alilo.backend.v1.Agent agents = 3;
}

message RemoveLogsRequest{
  int64 more_than_mb = 1;
  int64 more_than_days = 2;
}

message RemoveLogsResponse{
  bool status = 1;
  string message = 2;
}
